--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "omar-p",
+  "name": "OGTodo",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +20,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^7",
+    "mongoose": "^6.11.5",
     "mongoose-findorcreate": "^4.0.0",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
