--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,9 @@
             "use": "@vercel/node"
         }
     ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "app.js"
-        }
-    ]
+   {
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
+}
 }
